--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,8 +9,7 @@ build_script:
 
     appveyor DownloadFile https://github.com/Microsoft/vswhere/releases/download/2.3.2/vswhere.exe
 
-    FOR /F "tokens=* USEBACKQ" %%F IN (`vswhere.exe -property catalog_productLineVersion -all`) DO ( SET VS_VERSION=%%F )
-    for /l %%a in (1,1,128) do if "!VS_VERSION:~-1!"==" " set VS_VERSION=!VS_VERSION:~0,-1!
+    vsver.bat
 
     build.bat 5.3.5 x86
 
