--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ artifacts:
 deploy:
   release: Lua 5.3.5
   provider: GitHub
-  artifact: lua*.zip
+  artifact: build\*.zip
   draft: true
   auth_token:
     secure: mqLDd9ouwepeyhnE8og1Q/bbB4NPcKI37t/vZN4ZFS6Sj4yT6KlHiBKAs+EmbNoR
