--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,8 @@ build_script:
 - cmd: >-
     appveyor DownloadFile https://github.com/Microsoft/vswhere/releases/download/2.3.2/vswhere.exe
 
+    appveyor DownloadFile https://www.lua.org/ftp/lua-5.3.5.tar.gz
+
     vsver.bat
 
     build.bat 5.3.5 x86
