--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,6 +22,7 @@ artifacts:
     name: lua-%APPVEYOR_REPO_BRANCH%-vs$(VS_VERSION)-x64
 deploy:
   release: Lua %APPVEYOR_REPO_BRANCH%
+  description: 'Lua %APPVEYOR_REPO_BRANCH%'
   provider: GitHub
   force_update: true
   auth_token:
